vala: Don't transform an explicit "null" into a valid format-string
https://bugzilla.gnome.org/show_bug.cgi?id=791215

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -77,6 +77,7 @@ TESTS = \
 	methods/bug737222.vala \
 	methods/bug743877.vala \
 	methods/bug771964.vala \
+	methods/bug791215.vala \
 	methods/generics.vala \
 	control-flow/break.vala \
 	control-flow/expressions-conditional.vala \
