tests: Add chain-up regression test for real non-null struct parameters
https://bugzilla.gnome.org/show_bug.cgi?id=791785

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -58,6 +58,7 @@ TESTS = \
 	chainup/struct-base-foo.vala \
 	chainup/struct-this.vala \
 	chainup/struct-this-foo.vala \
+	chainup/bug791785.vala \
 	pointers/bug590641.vala \
 	namespaces.vala \
 	methods/lambda.vala \
