codegen: Add destroy out-param when invoking delegate returned by delegate
https://bugzilla.gnome.org/show_bug.cgi?id=792077

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -177,6 +177,7 @@ TESTS = \
 	delegates/bug703804.vala \
 	delegates/bug761360.vala \
 	delegates/bug772204.test \
+	delegates/bug792077.vala \
 	objects/chainup.vala \
 	objects/classes.vala \
 	objects/constructors.vala \
