tests: Add "template" parser test to increase coverage

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -313,6 +313,7 @@ TESTS = \
 	annotations/deprecated.vala \
 	annotations/description.vala \
 	annotations/noaccessormethod.test \
+	parser/template.vala \
 	$(NULL)
 
 NON_NULL_TESTS = \
