tests: Add "tuple" parser test to increase coverage

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -314,6 +314,7 @@ TESTS = \
 	annotations/description.vala \
 	annotations/noaccessormethod.test \
 	parser/template.vala \
+	parser/tuple.vala \
 	$(NULL)
 
 NON_NULL_TESTS = \
