tests: Add "initially-unowned" test to increase coverage

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -182,6 +182,7 @@ TESTS = \
 	objects/classes.vala \
 	objects/constructors.vala \
 	objects/generics.vala \
+	objects/initially-unowned.vala \
 	objects/fields.vala \
 	objects/interfaces.vala \
 	objects/methods.vala \
