--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -177,6 +177,7 @@ TESTS = \
 	objects/classes.vala \
 	objects/constructors.vala \
 	objects/generics.vala \
+	objects/initially-unowned.vala \
 	objects/fields.vala \
 	objects/interfaces.vala \
 	objects/methods.vala \
