tests: Add "iterator" methods tests to increase coverage

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -64,6 +64,7 @@ TESTS = \
 	methods/lambda.vala \
 	methods/closures.vala \
 	methods/contains.vala \
+	methods/iterator.vala \
 	methods/prepostconditions.vala \
 	methods/symbolresolution.vala \
 	methods/bug595538.vala \
