--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -315,6 +315,7 @@ TESTS = \
 	annotations/deprecated.vala \
 	annotations/description.vala \
 	annotations/noaccessormethod.test \
+	parser/assignment.vala \
 	parser/do-statement.vala \
 	parser/template.vala \
 	parser/tuple.vala \
