tests: Add "preprocessor" parser test to increase coverage

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -323,6 +323,7 @@ TESTS = \
 	annotations/noaccessormethod.test \
 	parser/assignment.vala \
 	parser/do-statement.vala \
+	parser/preprocessor.vala \
 	parser/switch-statement.vala \
 	parser/template.vala \
 	parser/tuple.vala \
