tests: Add "continue" parser test to increase coverage

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -316,6 +316,7 @@ TESTS = \
 	annotations/description.vala \
 	annotations/noaccessormethod.test \
 	parser/assignment.vala \
+	parser/continue-statement.vala \
 	parser/do-statement.vala \
 	parser/preprocessor.vala \
 	parser/template.vala \
