--- a/valadoc/Makefile.am
+++ b/valadoc/Makefile.am
@@ -16,6 +16,7 @@ AM_CFLAGS = \
 	-I$(top_srcdir)/ccode \
 	-I$(top_srcdir)/vala \
 	-I$(top_srcdir)/codegen \
+	$(COVERAGE_CFLAGS) \
 	$(GLIB_CFLAGS) \
 	$(GMODULE_CFLAGS) \
 	$(LIBGVC_CFLAGS) \
@@ -44,6 +45,7 @@ valadoc_LDADD = \
 	$(top_builddir)/vala/libvala@PACKAGE_SUFFIX@.la \
 	$(top_builddir)/ccode/libvalaccode.la \
 	$(top_builddir)/codegen/libvalaccodegen.la \
+	$(COVERAGE_LIBS) \
 	$(GLIB_LIBS) \
 	$(GMODULE_LIBS) \
 	$(LIBGVC_LIBS) \
@@ -51,6 +53,7 @@ valadoc_LDADD = \
 
 valadoc.vala.stamp: $(valadoc_VALASOURCES) $(top_srcdir)/vala/libvala@PACKAGE_SUFFIX@.vapi $(top_srcdir)/libvaladoc/valadoc@PACKAGE_SUFFIX@.vapi
 	$(VALA_V)$(VALAC) \
+		$(COVERAGE_VALAFLAGS) \
 		$(VALAFLAGS) \
 		-C \
 		--vapidir $(top_srcdir)/vala \
