--- a/valadoc/doclets/gtkdoc/Makefile.am
+++ b/valadoc/doclets/gtkdoc/Makefile.am
@@ -7,6 +7,7 @@ AM_CFLAGS = \
 	-I$(top_srcdir)/gee/ \
 	-I$(top_srcdir)/vala/ \
 	-I$(top_srcdir)/libvaladoc/ \
+	$(COVERAGE_CFLAGS) \
 	$(GLIB_CFLAGS) \
 	$(LIBGVC_CFLAGS) \
 	$(NULL)
@@ -35,6 +36,7 @@ libdoclet_la_SOURCES = \
 
 libdoclet.vala.stamp: $(libdoclet_la_VALASOURCES)
 	$(VALA_V)$(VALAC) \
+		$(COVERAGE_VALAFLAGS) \
 		$(VALAFLAGS) \
 		-C \
 		--vapidir $(top_srcdir)/vala --pkg libvala@PACKAGE_SUFFIX@ \
@@ -46,6 +48,7 @@ libdoclet.vala.stamp: $(libdoclet_la_VALASOURCES)
 libdoclet_la_LIBADD = \
 	$(top_builddir)/libvaladoc/libvaladoc@PACKAGE_SUFFIX@.la \
 	$(top_builddir)/vala/libvala@PACKAGE_SUFFIX@.la \
+	$(COVERAGE_LIBS) \
 	$(GLIB_LIBS) \
 	$(NULL)
 
