tests: Add test for parameter type checking of async methods
https://bugzilla.gnome.org/show_bug.cgi?id=792660

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -295,6 +295,7 @@ TESTS = \
 	asynchronous/bug762819.vala \
 	asynchronous/bug777242.vala \
 	asynchronous/bug783543.vala \
+	asynchronous/bug792660.vala \
 	asynchronous/closures.vala \
 	asynchronous/generator.vala \
 	asynchronous/yield.vala \
