tests: Add test for parameter type checking of async methods
https://bugzilla.gnome.org/show_bug.cgi?id=792660

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -235,6 +235,7 @@ TESTS = \
 	asynchronous/bug741929.vala \
 	asynchronous/bug742621.vala \
 	asynchronous/bug762819.vala \
+	asynchronous/bug792660.vala \
 	asynchronous/closures.vala \
 	dbus/basic-types.test \
 	dbus/arrays.test \
