vala: Variadic constructors without a real first parameter are not allowed

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -148,6 +148,7 @@ TESTS = \
 	delegates/bug792077.vala \
 	objects/chainup.vala \
 	objects/classes.vala \
+	objects/constructor-variadic.test \
 	objects/constructors.vala \
 	objects/fields.vala \
 	objects/interfaces.vala \
