--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -297,6 +297,7 @@ TESTS = \
 	asynchronous/bug777242.vala \
 	asynchronous/bug783543.vala \
 	asynchronous/bug792660.vala \
+	asynchronous/bug792942.vala \
 	asynchronous/closures.vala \
 	asynchronous/generator.vala \
 	asynchronous/yield.vala \
