codegen: Don't try to infer error argument on async begin methods
Only the async finish method might have an error parameter.

Regression of 527dac8050fe90d7a28619383f11e968ab5c9a77

https://bugzilla.gnome.org/show_bug.cgi?id=793158

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -300,6 +300,7 @@ TESTS = \
 	asynchronous/bug783543.vala \
 	asynchronous/bug792660.vala \
 	asynchronous/bug792942.vala \
+	asynchronous/bug793158.vala \
 	asynchronous/closures.vala \
 	asynchronous/generator.vala \
 	asynchronous/yield.vala \
