--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -240,6 +240,7 @@ TESTS = \
 	asynchronous/bug762819.vala \
 	asynchronous/bug792660.vala \
 	asynchronous/bug792942.vala \
+	asynchronous/bug793158.vala \
 	asynchronous/closures.vala \
 	dbus/basic-types.test \
 	dbus/arrays.test \
